tests/programs/valid/AbstractClass.java
public abstract class AbstractClass {
    // Abstract class implementation
    public AbstractClass() {
        
    }
}
