tests/programs/invalid/private_methods.java
public class private_methods {
  private int m() {
    return 42;
  }
}